--- a/jd.yml
+++ b/jd.yml
@@ -57,7 +57,11 @@ paths:
               type: string
       responses:
         "200":
-          description: 'OK'
+            description: '类目信息'
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/CategoryResponse'
 
 components:
   schemas:
