Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -38,7 +38,8 @@ paths:
                                 $ref: '#/components/schemas/Error'
     /product/getDetail:
         post:
-            tags: product
+            tags: 
+              - product
             description: "获取商品详情"
             parameters:
               - name: sku
