Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -38,6 +38,7 @@ paths:
                                 $ref: '#/components/schemas/Error'
     /product/getDetail:
         post:
+            summary: '获取商品详情'
             tags: 
               - product
             description: "获取商品详情"
