Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -174,7 +174,14 @@ components:
         type: "object"
         properties:
             result:
-                $ref: "#/components/schemas/SkuDetail"
+                type: array
+                items:
+                    type: "object"
+                    properties:
+                        name:
+                            type: string
+                        page_num:
+                            type: string
             resultCode:
                 type: integer
                 format: int32
