--- a/jd.yml
+++ b/jd.yml
@@ -83,6 +83,26 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/productPoolResponse'
+    /product/getSkuByPage:
+        post:
+            summary: '获取商品池内skuid'
+            tags: 
+              - product
+            description: "获取商品池"
+            parameters:
+              - name: token
+                in: query
+                schema:
+                    type: string
+                required: true
+            responses:
+                "200":
+                    description: '商品池响应'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/productPoolResponse'
+
 
 components:
   schemas:
