--- a/jd.yml
+++ b/jd.yml
@@ -95,6 +95,16 @@ paths:
                 schema:
                     type: string
                 required: true
+              - name: pageNum
+                in: query
+                schema:
+                    type: string
+                required: true
+              - name: pageNo
+                in: query
+                schema:
+                    type: integer
+                required: true
             responses:
                 "200":
                     description: '商品池响应'
