--- a/jd.yml
+++ b/jd.yml
@@ -82,7 +82,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/productPoolResponse'
+                                $ref: '#/components/schemas/ProductPoolResponse'
     /product/getSkuByPage:
         post:
             summary: '获取商品池内skuid'
@@ -107,11 +107,11 @@ paths:
                 required: true
             responses:
                 "200":
-                    description: '商品池响应'
+                    description: '商品池商品页面响应'
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/productPoolResponse'
+                                $ref: '#/components/schemas/PoolPageResponse'
 
 
 components:
