--- a/jd.yml
+++ b/jd.yml
@@ -88,7 +88,7 @@ paths:
             summary: '获取商品池内skuid'
             tags: 
               - product
-            description: "获取商品池"
+            description: "获取商品池内商品列表"
             parameters:
               - name: token
                 in: query
