Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -184,7 +184,19 @@ components:
           type: string
         success:
           type: boolean
-          default: true 
+          default: true
+    SimilarSkuResponse:
+        properties:
+            result:
+                $ref: "#/components/schemas/SkuDetail"
+            resultCode:
+                type: integer
+                format: int32
+            resultMessage:
+                type: string
+            success:
+                type: boolean
+                default: true 
     SkuDetail:
         type: "object"
         properties:
