Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -188,7 +188,9 @@ components:
     SimilarSkuResponse:
         properties:
             result:
-                $ref: "#/components/schemas/SkuDetail"
+                type: array
+                items:
+                    $ref: "#/components/schemas/SkuDetail"
             resultCode:
                 type: integer
                 format: int32
