Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -159,6 +159,7 @@ paths:
                                 type: integer
                             num:
                                 type: integer
+                                default: 1
 
               - name: token
                 in: query
