Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -260,6 +260,15 @@ components:
             jdPrice:
                 type: number
                 format: double
+            tax:
+                type: number
+                format: double
+            taxPrice:
+                type: number
+                format: double
+            nakedPrice:
+                type: number
+                format: double
     SkuDetail:
         type: "object"
         properties:
