Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -135,6 +135,15 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/SimilarSkuResponse'
+    /product/totalCheckNew:
+        post:
+            summary: '商品可购状态'
+            tags:
+                - price
+            parameters:
+                - name:
+        responses:
+            '200'
     /price/getSellPrice:
         post:
             summary: '获取商品价格'
