Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -254,9 +254,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: "#/components/schemas/SkuStateResponse" 
-
-
-
+    /product/check:
+        post:
+            summary: '商品可售性'
+            parameters:
+                - name: token
+                  in: query
+                  schema:
+                      type: string
+                - name: sku
+                  in: query
+                  schema:
+                      type: string
+                      example: '1,2'
+                - name: queryExts
+                  in: query
+                  schema:
+                      type: string
+            responses:
+                "200":
+                    description: '商品可售返回'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/SkuCheckResponse"
 components:
   schemas:
     Error:
@@ -381,6 +402,57 @@ components:
             success:
                 type: boolean
                 default: true
+    SkuCheckResponse:
+        properties:
+            result:
+                type: array
+                items:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/SkuCheck"
+            resultCode:
+                type: integer
+                format: int32
+            resultMessage:
+                type: string
+            success:
+                type: boolean
+                default: true
+    SkuCheck:
+        properties:
+            skuId:
+                type: integer
+                description: "商品编号"
+            name:
+                type: string
+                description: "商品名称"
+            saleState:
+                type: integer
+                enum:
+                    - 1
+                    - 0
+                description: "是否可售，1：是，0：否"
+            isCanVAT:
+                type: integer
+                enum:
+                    - 1
+                    - 0
+                description: "是否可开专票，1：支持，0：不支持"
+            noReasonToReturn:
+                type: integer
+                description: "否	无理由退货类型：0,1,2,3,4,5,6,7,8. 0、3：不支持7天无理由退货；1、5、8或null：支持7天无理由退货；2：支持90天无理由退货；4、7：支持15天无理由退货；6：支持30天无理由退货；其他枚举值,无效"
+                enum:
+                    - 1
+                    - 2
+                    - 3
+                    - 4
+                    - 5
+                    - 6
+                    - 7
+                    - 8
+            thwa:
+                type: integer
+                description: "无理由退货文案类型：null：文案空；0：文案空；1：支持7天无理由退货；2：支持7天无理由退货（拆封后不支持）；3：支持7天无理由退货（激活后不支持）4：支持7天无理由退货（使用后不支持）；5：支持7天无理由退货（安装后不支持）；12：支持15天无理由退货；13：支持15天无理由退货（拆封后不支持）；14：支持15天无理由退货（激活后不支持）；15：支持15天无理由退货（使用后不支持）；16：支持15天无理由退货（安装后不支持）；22：支持30天无理由退货；23：支持30天无理由退货（安装后不支持）；24：支持30天无理由退货（拆封后不支持）；25：支持30天无理由退货（使用后不支持）；26：支持30天无理由退货（激活后不支持）；"
     SkuState:
         properties:
             state:
