Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -278,6 +278,48 @@ paths:
                         application/json:
                             schema:
                                 $ref: "#/components/schemas/SkuCheckResponse"
+    /product/checkAreaLimit:
+        post:
+            summary: '查询商品区域可售限制'
+            tags:
+                - product
+            parameters:
+                - name: token
+                  in: query
+                  schema:
+                      type: string
+                - name: skuIds
+                  in: query
+                  schema:
+                      type: string
+                  example: '1,2'
+                - name: province
+                  in: query
+                  schema:
+                    type: string
+                    description: '省，京东一级地址编号'
+                - name: city
+                  in: query
+                  schema:
+                      type: string
+                  description: '市，京东二级地址编号'
+                - name: county
+                  in: query
+                  schema:
+                      type: string
+                  description: '县，京东三级地址编号'
+                - name: town
+                  in: query
+                  schema:
+                    type: string
+                  description: '镇，京东四级地址编号'
+            responses:
+                 "200":
+                     description: '商品可售返回'
+                     content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/AreaLimitResponse"
 components:
   schemas:
     Error:
@@ -418,6 +460,28 @@ components:
             success:
                 type: boolean
                 default: true
+    AreaLimitResponse:
+        properties:
+            result:
+                type: array
+                items:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/AreaLimit"
+            resultCode:
+                type: integer
+                format: int32
+            resultMessage:
+                type: string
+            success:
+                type: boolean
+                default: true
+    AreaLimit:
+        properties:
+            skuId:
+                type: integer
+            isAreaRestrict:
+                type: boolean
     SkuCheck:
         properties:
             skuId:
