Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -191,7 +191,7 @@ paths:
                   required: true
             responses:
                 "200":
-                    description: '获取小'
+                    description: '成功获取消息'
                     content:
                         application/json:
                             schema:
