--- a/jd.yml
+++ b/jd.yml
@@ -495,6 +495,31 @@ components:
             success:
                 type: boolean
                 default: true
+    MessageResponse:
+        properties:
+            result:
+                type: array
+                items:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/Message"
+            resultCode:
+                type: integer
+                format: int32
+            resultMessage:
+                type: string
+            success:
+                type: boolean
+                default: true
+    Message:
+        properties:
+            type:
+                type: integer
+            id:
+                type: integer
+            time:
+                type: string
+                format: date
     AreaLimit:
         properties:
             skuId:
