Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -697,6 +697,8 @@ components:
         properties:
             pageCount:
                 type: integer
+                minimum: 0
+                maximum: 10
             skuIds:
                 type: array
                 items:
