Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -684,6 +684,7 @@ components:
                             type: string
                         page_num:
                             type: string
+                            format: number
             resultCode:
                 type: integer
                 format: int32
