Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -664,6 +664,9 @@ components:
         properties:
             catClass:
                 type: integer
+                minimum: 1
+                maximum: 3
+                example: 1
             catId:
                 type: integer
             name:
