Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -30,6 +30,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/CategoryResponse'
+                            example: "{}"
                 default:
                     description: 异常报错
                     content:
