Postman updated 京东 1.0.0 Commit reference: NDVlYTZkMTMtMmY2Zi00MmEwLWFjN2YtNWExNjViZWFmYzhl

--- a/jd.yml
+++ b/jd.yml
@@ -675,6 +675,9 @@ components:
                 type: integer
             state:
                 type: integer
+                enum:
+                    - 1
+                    - 0
     ProductPoolResponse:
         type: "object"
         properties:
